# adventofcode-2024

./: .gitignore  Cargo.toml
day_/: Cargo.toml
day_/src/: main.rs
day_01/: Cargo.toml
day_01/src/: location.rs  main.rs
day_02/: Cargo.toml
day_02/src/: main.rs  report.rs
day_03/: Cargo.toml
day_03/src/: computer.rs  main.rs
day_04/: Cargo.toml
day_04/src/: ceres.rs  main.rs
day_05/: Cargo.toml
day_05/src/: main.rs  sleigh.rs
day_06/: Cargo.toml
day_06/src/: lab.rs  main.rs
day_07/: Cargo.toml
day_07/src/: bridge.rs  main.rs
day_08/: Cargo.toml
day_08/src/: antenna.rs  main.rs
day_09/: Cargo.toml
day_09/src/: disk.rs  fast_disk.rs  fragmentable_disk.rs  main.rs
day_10/: Cargo.toml
day_10/src/: main.rs  model.rs
day_11/: Cargo.toml
day_11/src/: main.rs  model.rs
day_12/: Cargo.toml
day_12/src/: main.rs  model.rs
day_13/: Cargo.toml
day_13/src/: main.rs  model.rs
day_14/: Cargo.toml
day_14/src/: main.rs  model.rs  tiles.rs
day_15/: Cargo.toml
day_15/src/: main.rs  model.rs
day_16/: Cargo.toml
day_16/src/: main.rs  model.rs
day_17/: Cargo.toml  example-2.txt
day_17/src/: main.rs  model.rs
day_18/: Cargo.toml
day_18/src/: main.rs  model.rs
day_19/: Cargo.toml
day_19/src/: main.rs  model.rs
day_20/: Cargo.toml
day_20/src/: main.rs  model.rs
fixed-grid/: Cargo.toml
fixed-grid/src/: coordinate.rs  grid.rs  lib.rs
grid/: Cargo.toml
grid/src/: direction.rs  grid.rs  lib.rs  position.rs
math-2d/: Cargo.toml
math-2d/src/: matrix.rs  vector.rs
matrix/: Cargo.toml
matrix/src/: direction.rs  lib.rs  matrix.rs  position.rs
