#[package]
#name = "adventofcode-2024"
#version.workspace = true
#edition.workspace = true

[workspace]
members = [
    "day_01",
    "day_02",
    "day_03",
]

resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
regex = "1.11"