#[package]
#name = "adventofcode-2024"
#version.workspace = true
#edition.workspace = true

[workspace]
members = [
    "matrix",
    "day_01",
    "day_02",
    "day_03",
    "day_04",
    "day_05",
    "day_06",
    "day_07",
    "day_08",
    "day_09",
    "day_10",
    "day_11",
]

resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
regex = "1.11"
matrix = { path = "matrix" }