#[package]
#name = "adventofcode-2024"
#version.workspace = true
#edition.workspace = true

[workspace]
members = [
    "grid",
    "fixed-grid",
    "math-2d",
    "day_01",
    "day_02",
    "day_03",
    "day_04",
    "day_05",
    "day_06",
    "day_07",
    "day_08",
    "day_09",
    "day_10",
    "day_11",
    "day_12",
    "day_13",
    "day_14",
    "day_15",
    "day_16",
    "day_17",
    "day_18",
]

resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
fallible_impl_from = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
grid = { path = "grid" }
fixed-grid = { path = "fixed-grid" }
math-2d = { path = "math-2d" }